# agentic-traffic

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.openenv-api  Dockerfile.visualizer  README.md  __init__.py  client.py  environment.yml  models.py  openenv.yaml  pyproject.toml  test.py  testing1
agents/: README.md  __init__.py  district_controller.py  district_coordinator.py  heuristic_controller.py  local_policy.py  message_protocol.py
artifacts/dqn_shared/: best_validation.pt  last.pt  training_log.jsonl  validation_log.jsonl
configs/: README.md  districts.yaml  experiment.yaml  training.yaml
dashboard/: README.md  metrics.py  streamlit_app.py
data/: README.md
data/generators/: README.md  __init__.py  city_generator.py  config_generator.py  district_generator.py  flow_generator.py  generate_dataset.py  main.py  roadnet_generator.py  scenario_generator.py  schemas.py  utils.py  validate_routes.py
data/splits/: README.md  test_cities.txt  (+1 more)
district_llm/: FINAL_ABLATION_RUNBOOK.md  RL_GUIDANCE_EVAL_RUNBOOK.md  RL_LLM_WRAPPER_SWEEP_RUNBOOK.md  __init__.py  data.py  derivation.py  eval.py  generate_dataset.py  guided_control.py  heuristic_guidance.py  inference.py  metrics.py  prompting.py  repair.py  rl_guidance_wrapper.py  schema.py  summary_builder.py  teachers.py  train_unsloth.py
env/: README.md  __init__.py  cityflow_adapter.py  district_summary.py  intersection_config.py  observation_builder.py  reward.py  scenarios.py  traffic_env.py  utils.py
notebooks/: Copy_of_Llama3_1_(8B)_Alpaca.ipynb  README.md  llama_finetune.ipynb
openenv_app/: README.md  __init__.py  app.py  openenv_wrapper.py  replay_runner.py  requirements.txt  schema.py
scripts/: README.md  anova_test.py  compare_local_policies.py  diagnose_llm_runtime.py  eval_rl_guidance_ablation.py  evaluate.py  generate_large_district_dataset.py  generate_medium_district_dataset.py  generate_small_district_dataset.py  prepare_openenv_push.sh  push_openenv.sh  quick_rl_llm_eval.py  run_demo.py  smoke_test_env.py  sweep_rl_llm_wrapper.py
server/: Dockerfile  app.py  environment.py  path_validators.py  policy_runner.py  remote_runner.py  requirements.txt  roadnet_matcher.py  visualizer_app.py
training/: README.md  __init__.py  cityflow_dataset.py  dataset.py  device.py  models.py  rollout.py  train_district_llm.py  train_local_policy.py  trainer.py
(+98 files in other folders)
